# test_kneed

./: README.md  kneed.ipynb  main.py  pyproject.toml  requirements.txt
